--- a/src/MovieLibrary/appsettings.json
+++ b/src/MovieLibrary/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"connectionStrings": {
+		"movieLibraryDatabase": "mongodb://localhost:27017/movieLibraryDB"
+	},
+
+	"logging": {
+		"logLevel": {
+			"default": "Information",
+			"microsoft": "Warning",
+			"microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+
+	"allowedHosts": "*"
 }
