--- a/tests/MovieLibrary.Logic.IntegrationTests/MovieLibrary.Logic.IntegrationTests.csproj
+++ b/tests/MovieLibrary.Logic.IntegrationTests/MovieLibrary.Logic.IntegrationTests.csproj
@@ -6,15 +6,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Moq" Version="4.14.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\MovieLibrary.Dal.MongoDB\MovieLibrary.Dal.MongoDB.csproj" />
     <ProjectReference Include="..\..\src\MovieLibrary.Logic\MovieLibrary.Logic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestsSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <PropertyGroup>
