Integrate CF.Library.Logging package

--- a/src/MovieLibrary/appsettings.json
+++ b/src/MovieLibrary/appsettings.json
@@ -4,11 +4,26 @@
 	},
 
 	"logging": {
-		"logLevel": {
-			"default": "Information",
-			"microsoft": "Warning",
-			"microsoft.Hosting.Lifetime": "Information"
-		}
+		"defaultLogLevel": "Debug",
+		"targets": [
+			{
+				"type": "Console",
+				"logLevel": "Warning"
+			},
+			{
+				"type": "RollingFile",
+				"logLevel": "Information",
+				"settings": {
+					"logPath": "logs",
+					"firstFileNamePattern": "MovieLibrary - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID} - START",
+					"fileNamePattern": "MovieLibrary - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID}",
+					"fileNameExtension": "log",
+					"rollSize": 4194304,
+					"jsonOutput": false,
+					"messageFormat": "{Timestamp:yyyy.MM.dd HH:mm:ss.fff} [{Level:u3}] [TID: {PrettyThreadId}] {Message}{NewLine}{Exception}"
+				}
+			}
+		]
 	},
 
 	"allowedHosts": "*"
