Change default path to logs folder
Having logs folder on the same level with application binaries makes problems during deployment, because we must care about preserving logs folder while all other content is deleted.

--- a/src/MovieLibrary/appsettings.json
+++ b/src/MovieLibrary/appsettings.json
@@ -14,7 +14,7 @@
 				"type": "RollingFile",
 				"logLevel": "Information",
 				"settings": {
-					"logPath": "logs",
+					"logPath": "../../logs/MovieLibrary/",
 					"firstFileNamePattern": "MovieLibrary - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID} - START",
 					"fileNamePattern": "MovieLibrary - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID}",
 					"fileNameExtension": "log",
