--- a/src/MovieLibrary.Dal.MongoDB/MovieLibrary.Dal.MongoDB.csproj
+++ b/src/MovieLibrary.Dal.MongoDB/MovieLibrary.Dal.MongoDB.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="all" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
