Add paging for list with movies to get

--- a/src/MovieLibrary/appsettings.json
+++ b/src/MovieLibrary/appsettings.json
@@ -3,6 +3,8 @@
 		"movieLibraryDatabase": "mongodb://localhost:27017/movieLibraryDB"
 	},
 
+	"moviesPageSize": 10,
+
 	"logging": {
 		"defaultLogLevel": "Debug",
 		"targets": [
