--- a/tests/MovieLibrary.Tests/MovieLibrary.Tests.csproj
+++ b/tests/MovieLibrary.Tests/MovieLibrary.Tests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq.AutoMock" Version="2.0.0" />
