--- a/tests/MovieLibrary.IntegrationTests/MovieLibrary.IntegrationTests.csproj
+++ b/tests/MovieLibrary.IntegrationTests/MovieLibrary.IntegrationTests.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
@@ -20,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="snapshots/**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Update="TestsSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
