--- a/src/MovieLibrary/appsettings.json
+++ b/src/MovieLibrary/appsettings.json
@@ -18,7 +18,7 @@
 				"type": "RollingFile",
 				"logLevel": "Information",
 				"settings": {
-					"logPath": "../../logs/MovieLibrary/",
+					"logPath": "logs",
 					"firstFileNamePattern": "MovieLibrary - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID} - START",
 					"fileNamePattern": "MovieLibrary - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID}",
 					"rollSize": 4194304,
