Update StyleCop.Analyzers to version 1.2.0-beta.333

--- a/src/MovieLibrary.Dal.MongoDB/MovieLibrary.Dal.MongoDB.csproj
+++ b/src/MovieLibrary.Dal.MongoDB/MovieLibrary.Dal.MongoDB.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.333" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
