--- a/tests/MovieLibrary.UnitTests/MovieLibrary.UnitTests.csproj
+++ b/tests/MovieLibrary.UnitTests/MovieLibrary.UnitTests.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Moq.AutoMock" Version="2.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.333" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
