Configure separate database for dev environment

--- a/src/MovieLibrary/appsettings.Development.json
+++ b/src/MovieLibrary/appsettings.Development.json
@@ -1,2 +1,7 @@
 {
+	"connectionStrings": {
+		"movieLibraryDatabaseDev": "mongodb://localhost:27017/movieLibraryDevelopmentDB"
+	},
+
+	"connectionStringName": "movieLibraryDatabaseDev"
 }
