--- a/tests/MovieLibrary.IntegrationTests/MovieLibrary.IntegrationTests.csproj
+++ b/tests/MovieLibrary.IntegrationTests/MovieLibrary.IntegrationTests.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.40" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="Moq" Version="4.16.0" />
