--- a/tests/MovieLibrary.UnitTests/MovieLibrary.UnitTests.csproj
+++ b/tests/MovieLibrary.UnitTests/MovieLibrary.UnitTests.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.1.2" PrivateAssets="all" />
     <PackageReference Include="FluentAssertions" Version="6.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Moq.AutoMock" Version="3.1.0" />
