--- a/src/MovieLibrary/MovieLibrary.csproj
+++ b/src/MovieLibrary/MovieLibrary.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <LangVersion>latest</LangVersion>
     <Version>1.3.1</Version>
   </PropertyGroup>
