--- a/tests/MovieLibrary.UnitTests/MovieLibrary.UnitTests.csproj
+++ b/tests/MovieLibrary.UnitTests/MovieLibrary.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
