--- a/src/MovieLibrary.Dal.MongoDB/MovieLibrary.Dal.MongoDB.csproj
+++ b/src/MovieLibrary.Dal.MongoDB/MovieLibrary.Dal.MongoDB.csproj
@@ -1,20 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <CodeAnalysisRuleSet>..\..\MovieLibrary.src.ruleset</CodeAnalysisRuleSet>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
+  <ImportGroup Label="Properties">
+    <Import Project="..\..\MovieLibrary.src.props" />
+  </ImportGroup>
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.333" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
